src/test/ui/issues/issue-20616-2.stderr
error: expected one of `,` or `>`, found `(`
  --> $DIR/issue-20616-2.rs:12:31
   |
LL | type Type_2 = Type_1_<'static ()>;
   |                               ^ expected one of `,` or `>` here

error: aborting due to previous error

